--- a/index.html
+++ b/index.html
@@ -39,94 +39,96 @@
             </div>
         </div>
     </header>
-    <div class="slide">
-        <h1 style="color: blue">Web ABC</h1>
-        <p style="color: blue">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            <br> Quasi fugit quo tempore corporis iste inventore quos incidunt
-            <br>natus esse porro, perspiciatis alias, voluptatum laudantium
-            <br>et accusamus nulla aliquam non dolore!</p>
+    <div class="container">
+        <div class="slide">
+            <h1 style="color: blue">Web ABC</h1>
+            <p style="color: blue">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                <br> Quasi fugit quo tempore corporis iste inventore quos incidunt
+                <br>natus esse porro, perspiciatis alias, voluptatum laudantium
+                <br>et accusamus nulla aliquam non dolore!</p>
 
-    </div>
-    <div class="content">
-        <div class="col1">
-            <h3>Welcome</h3>
-            <ul>
+        </div>
+        <div class="content">
+            <div class="col1">
+                <h3>Welcome</h3>
+                <ul>
 
-                <div class="btn-content">
-                    <li><a href="#">Sign in</a></li>
+                    <div class="btn-content">
+                        <li><a href="#">Sign in</a></li>
+                    </div>
+                    <div class="btn-content">
+                        <li><a href="#">Create account</a></li>
+                    </div>
+
+                </ul>
+            </div>
+            <div class="col2">
+                <h3>Popular department</h3>
+                <div class="row">
+                    <img class="pro" src="img/girls.jpg" alt="products">
+                    <img class="pro" src="img/girls.jpg" alt="products">
                 </div>
-                <div class="btn-content">
-                    <li><a href="#">Create account</a></li>
+                <div class="row">
+                    <img class="pro" src="img/girls.jpg" alt="products">
+                    <img class="pro" src="img/girls.jpg" alt="products">
                 </div>
-
-            </ul>
-        </div>
-        <div class="col2">
-            <h3>Popular department</h3>
-            <div class="row">
-                <img class="pro" src="img/girls.jpg" alt="products">
-                <img class="pro" src="img/girls.jpg" alt="products">
+                <div class="row">
+                    <img class="pro" src="img/girls.jpg" alt="products">
+                    <img class="pro" src="img/girls.jpg" alt="products">
+                </div>
             </div>
-            <div class="row">
-                <img class="pro" src="img/girls.jpg" alt="products">
-                <img class="pro" src="img/girls.jpg" alt="products">
+            <div class="col3">
+                <h3>Clothing</h3>
+                <img src="img/girls.jpg" alt="clothing" class="clothing">
+                <br>
+                <div class="btn-content btn-clothing "><a href="#" class="">Shop Clothing</a></div>
             </div>
-            <div class="row">
-                <img class="pro" src="img/girls.jpg" alt="products">
-                <img class="pro" src="img/girls.jpg" alt="products">
+            <div class="col4">
+                <h3>Deals</h3>
+                <img src="img/girls.jpg" alt="clothing" class="btn-clothing">
+                <br>
+                <span>Price</span>
+                <div class="btn-content btn-clothing"><a href="#" class="">Shop Deals</a></div>
             </div>
         </div>
-        <div class="col3">
-            <h3>Clothing</h3>
-            <img src="img/girls.jpg" alt="clothing" class="clothing">
-            <br>
-            <div class="btn-content btn-clothing "><a href="#" class="">Shop Clothing</a></div>
+        <div class="return-to-top">
+            <a href="#">Return to top</a>
         </div>
-        <div class="col4">
-            <h3>Deals</h3>
-            <img src="img/girls.jpg" alt="clothing" class="btn-clothing">
-            <br>
-            <span>Price</span>
-            <div class="btn-content btn-clothing"><a href="#" class="">Shop Deals</a></div>
-        </div>
+        <footer>
+            <div class="list">
+                <ul>
+                    <li><a href="#"><b>About</b></a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </div>
+            <div class="list">
+                <ul>
+                    <li><a href="#"><b>About</b></a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </div>
+            <div class="list">
+                <ul>
+                    <li><a href="#"><b>About</b></a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </div>
+            <div class="list">
+                <ul>
+                    <li><a href="#"><b>About</b></a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
-    <div class="return-to-top">
-        <a href="#">Return to top</a>
-    </div>
-    <footer>
-        <div class="list">
-            <ul>
-                <li><a href="#"><b>About</b></a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </div>
-        <div class="list">
-            <ul>
-                <li><a href="#"><b>About</b></a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </div>
-        <div class="list">
-            <ul>
-                <li><a href="#"><b>About</b></a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </div>
-        <div class="list">
-            <ul>
-                <li><a href="#"><b>About</b></a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </div>
-    </footer>
 
 </body>
 
